--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "AUS Code Dictionary VNPZ v5.6",
+  "name": "AUS Code Dictionary v5.6",
   "version": "5.6",
   "author": "Удовеня Александр <alex31kv@yandex.ru>",
   "description": "Надстройка для работы с кодами Aspen Unified Scheduling (AUS).",
